--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,17 +11,18 @@
     "lint:fix": "eslint . --ext ts,tsx --fix"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
+    "@hookform/resolvers": "^3.3.2",
+    "antd": "^5.12.8",
+    "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "antd": "^5.12.8",
-    "@ant-design/icons": "^5.2.6",
-    "axios": "^1.6.2",
-    "zustand": "^4.4.7",
     "react-hook-form": "^7.48.2",
-    "@hookform/resolvers": "^3.3.2",
+    "react-router-dom": "^6.20.1",
+    "recharts": "^3.1.2",
     "zod": "^3.22.4",
-    "dayjs": "^1.11.10"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
