[feat]: Add Contact Confirmation functionality, Image Collage and Responsiveness

--- a/backend/env.example
+++ b/backend/env.example
@@ -16,3 +16,10 @@ RATE_LIMIT_MAX_REQUESTS=100
 
 # CORS
 CORS_ORIGIN=http://localhost:3000
+
+# Email Configuration (Brevo SMTP)
+SMTP_HOST=<smtp-host>
+SMTP_PORT=587
+SMTP_USER=<user>
+SMTP_PASS=<pass>
+SMTP_FROM=<email>
