Add blog & admin page

--- a/backend/env.example
+++ b/backend/env.example
@@ -22,4 +22,13 @@ SMTP_HOST=<smtp-host>
 SMTP_PORT=587
 SMTP_USER=<user>
 SMTP_PASS=<pass>
-SMTP_FROM=<email>
+SMTP_FROM=contact@agevaa.com
+
+# Email Addresses
+ADMIN_EMAIL=admin@agevaa.com
+CONTACT_EMAIL=contact@agevaa.com
+
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME=<your-cloud-name>
+CLOUDINARY_API_KEY=<your-api-key>
+CLOUDINARY_API_SECRET=<your-api-secret>
