--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,10 @@
     "start": "node dist/index.js",
     "clean": "rm -rf dist",
     "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix"
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "create-admin": "ts-node src/scripts/createAdmin.ts",
+    "create-blogs": "ts-node src/scripts/createDummyBlogs.ts",
+    "test-blog": "ts-node src/scripts/testBlogCreation.ts"
   },
   "keywords": [
     "eldercare",
@@ -20,8 +23,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -30,6 +35,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "zod": "^3.22.4"
   },
@@ -37,7 +43,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
